--- a/001_qubit_ja.ipynb
+++ b/001_qubit_ja.ipynb
@@ -71,7 +71,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SrnUTBH_4K-Q",
-        "outputId": "45dd86b7-668a-493a-e60e-eefe8d5be7cb"
+        "outputId": "de75c8e4-90df-4e93-98ae-dd5d783b259c"
       },
       "source": [
         "!pip install blueqat"
@@ -81,13 +81,9 @@
         {
           "output_type": "stream",
           "text": [
-            "Collecting blueqat\n",
-            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/42/44/58c8fb85d0f7fb40eee88da1181ca698874e2484d5fdb8c0266ad82e0ec3/blueqat-0.4.2-py3-none-any.whl (62kB)\n",
-            "\r\u001b[K     |█████▎                          | 10kB 15.3MB/s eta 0:00:01\r\u001b[K     |██████████▌                     | 20kB 22.0MB/s eta 0:00:01\r\u001b[K     |███████████████▊                | 30kB 26.8MB/s eta 0:00:01\r\u001b[K     |█████████████████████           | 40kB 26.5MB/s eta 0:00:01\r\u001b[K     |██████████████████████████▎     | 51kB 27.0MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▌| 61kB 22.7MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 71kB 6.7MB/s \n",
-            "\u001b[?25hRequirement already satisfied: scipy>=1.1.0 in /usr/local/lib/python3.7/dist-packages (from blueqat) (1.4.1)\n",
+            "Requirement already satisfied: blueqat in /usr/local/lib/python3.7/dist-packages (0.4.2)\n",
             "Requirement already satisfied: numpy~=1.12 in /usr/local/lib/python3.7/dist-packages (from blueqat) (1.19.5)\n",
-            "Installing collected packages: blueqat\n",
-            "Successfully installed blueqat-0.4.2\n"
+            "Requirement already satisfied: scipy>=1.1.0 in /usr/local/lib/python3.7/dist-packages (from blueqat) (1.4.1)\n"
           ],
           "name": "stdout"
         }
@@ -127,7 +123,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8ScrqFn44Nq-",
-        "outputId": "5f377428-dee3-4c56-90c1-6c04bd21d51f"
+        "outputId": "77359a1e-6a19-4e77-8405-32eace431fd6"
       },
       "source": [
         "from blueqat import Circuit\n",
@@ -399,12 +395,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0lPHZwT_D4pD",
-        "outputId": "1fe475ba-c02a-4b14-e742-e8f4cace9893"
+        "outputId": "35a362de-1461-4469-d522-cf2b5555f31f"
       },
       "source": [
         "Circuit().h[0].run()"
       ],
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -416,7 +412,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 3
         }
       ]
     },
@@ -467,12 +463,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0yudlO6cPGFv",
-        "outputId": "2dfdb1e8-c9bd-4f56-e2eb-3b4309167abc"
+        "outputId": "c8ecfb9d-235c-4f16-8605-d7423fed5e84"
       },
       "source": [
         "Circuit().cx[0,1].m[:].run(shots=100)"
       ],
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -484,7 +480,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 4
         }
       ]
     },
@@ -547,12 +543,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2F06nlcIQcFA",
-        "outputId": "0a540eed-8694-4de2-a765-bbbcdc80760d"
+        "outputId": "38a2c716-05a0-4863-8c00-03833b23ca6b"
       },
       "source": [
         "Circuit().x[0].cx[0,1].m[:].run(shots=1)"
       ],
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -564,7 +560,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 5
         }
       ]
     },
@@ -810,7 +806,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     }
   ]
